# mediaforge

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 20260624_1616_5911cf02516a_initial_schema.py
data/: products.csv
frontend/: Dockerfile  next.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.ts
mediaforge/: celery_app.py  config.py  http_clients.py  logging.py  storage.py
mediaforge/auth/: __init__.py  cookies.py  jwt.py  password.py  session_cache.py  tenant.py
mediaforge/db/: __init__.py  api_key_store.py  audit_store.py  engine.py  job_store.py  memory_store.py  redis_client.py  refresh_token_store.py  tables.py  tenant_store.py  user_store.py
scripts/: init_db.py  seed_rag.py  seed_users.py  test_milvus.py
tests/: conftest.py  test_agent_graph.py  test_agent_router.py  test_agent_tools.py  test_auth.py  test_batch_graph.py  test_batch_nodes.py  test_batch_persistence.py  test_batch_router.py  test_compliance.py  test_dependencies.py  test_embeddings.py  test_foundation_smoke.py  test_image_workers.py  test_job_store.py  test_memory_manager.py  test_milvus_store.py  test_models.py  test_observability.py  test_openrouter_client.py  test_prompt_defense.py  test_rag_tool.py  test_rate_limit.py  test_retriever.py  test_state.py  test_storage.py  test_tables.py  test_tasks_list.py  test_tasks_router.py  test_tenant_router.py  test_upload_router.py  test_vector_store.py  test_video_workers.py
(+89 files in other folders)
