[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mediaforge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "bcrypt>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=1.2.0",
    "chromadb>=0.5.0",
    "dashscope>=1.19.0",
    "langchain-community>=0.3.0",
    "python-jose[cryptography]>=3.3.0",
    "scikit-learn>=1.3.0",
    "slowapi>=0.1.9",
    "pymilvus>=2.4.0",
    "python-multipart>=0.0.9",
    "langchain-openai>=1.3.2",
    "langchain-chroma>=1.1.0",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "celery[redis]>=5.4.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.22.0",
    "ruff>=0.6.0",
    "fakeredis>=2.23.0",
    "aiosqlite>=0.20.0",
]
s3 = [
    "aioboto3>=13.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
